[package]
name = "s3-simple-expire"
version = "0.1.0"
edition = "2021"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
aws-config = "0.55.3"
aws-sdk-s3 = "0.28.0"
aws-smithy-types-convert = { version = "0.55.3", features = ["convert-chrono"] }
chrono = "0.4.26"
clap = { version = "4.3.11", features = ["derive", "env"] }
tokio = { version = "1.29.1", features = ["macros", "rt-multi-thread"] }
